# knurling

./: .gitignore  Cargo.toml  README.md  build.rs  sample.toml
src/: config.rs  main.rs  widgets.rs  window.rs
src/widgets/: battery.rs  mod.rs  mpd.rs  standard.rs  widget.rs
