[package]
name = "knurling"
version = "0.1.0"
authors = ["Getty Ritter <samothes@infinitenegativeutility.com>"]
edition = "2018"

[dependencies]
cairo-rs = "0.6"
pango = "0.6"
pangocairo = "0.7"
# time = "0.1"
chrono = "*"
libc = "0.2"
failure = "*"

[dependencies.cairo-sys-rs]
version = "0.8"
features = ["xlib"]

[dependencies.x11]
version = "2.18"
features = ["xlib", "xinput"]
